Commit: 1.Added @main to activity_main.xml. 2.Removed unnecessary images. 3.Removed hardcoded dependencies. 4.Added version to lib.tom. 5.Created mapper.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- App -->
-    <string name="app_name">SuperHero Showcase</string>
+    <string name="app_name">Work of art views</string>
 
     <!-- Header -->
-    <string name="header_title">SuperHero Showcase</string>
-    <string name="header_logo_desc">SuperHero Showcase Logo</string>
+    <string name="header_title">work of art views</string>
+    <string name="header_logo_desc">work of art logo</string>
 
     <!-- Banner -->
-    <string name="banner_image_desc">Superhero Team</string>
-    <string name="banner_title">Discover Your Heroes</string>
-    <string name="banner_subtitle">Explore the greatest superheroes of all time</string>
+    <string name="banner_image_desc">work of art pics</string>
+    <string name="banner_title">Discover your work of art</string>
+    <string name="banner_subtitle">Explore the greatest work of art of all time</string>
 
     <!-- Results -->
-    <string name="results_count">Showing %d Work of art</string>
+    <string name="results_count">Showing %d work of art</string>
 
     <!-- No results -->
-    <string name="no_results_title">No heroes found</string>
+    <string name="no_results_title">No work of art found</string>
     <string name="no_results_message">Try adjusting your search or filter criteria</string>
 
     <!-- Bottom Navigation -->
