Commit: 1.Removed unnecessary images. 2.Updated item_card. 3.Fixed strings and themes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="header_logo_desc">work of art logo</string>
 
     <!-- Banner -->
-    <string name="banner_image_desc">work of art pics</string>
+    <string name="workOfArt_image_desc">work of art pics</string>
     <string name="banner_title">Discover your work of art</string>
     <string name="banner_subtitle">Explore the greatest work of art of all time</string>
 
